<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cowprint"
    tools:context=".controllers.CreateInvoiceActivity">

    <TextView
        android:id="@+id/invoiceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:background="#FFFFFF"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/localProductsRecyclerView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_240sdp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dahlsProductsRecyclerView"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frozenProductsRecyclerView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_120sdp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localProductsRecyclerView"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/dahlsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="Dahls's Dairy"
        android:textColor="#000000"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dahlsProductsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/localProuctLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="Local"
        android:textColor="#000000"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/localProductsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/frozenProductsTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="Frozen"
        android:textColor="#000000"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frozenProductsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localProductsRecyclerView"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dahlsProductsRecyclerView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tempOrderRecyclerView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/itemQuantityTextView"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginBottom="152dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:cursorVisible="true"
        android:editable="true"
        android:gravity="center"
        android:hint="0"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/incrementQuantityButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/incrementButton"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemQuantityTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/decrementQuantityButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/decrementButton"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemQuantityTextView"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tempOrderRecyclerView"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_300sdp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoiceNameTextView"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/clearOrderButton"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@color/red_main"
        android:text="@string/clearOrder"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempOrderRecyclerView"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/addItemToOrderButton"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="#88FD00"
        android:text="@string/addItemToOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemQuantityTextView"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/invoiceItemNameTextView"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/itemQuantityTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempOrderRecyclerView"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/invoiceDeleteItem"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@color/red_main"
        android:text="@string/invoiceDeleteItem"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decrementQuantityButton"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearOrderButton"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_15sdp"
        android:background="#FFFFFF"
        android:text="QTY  |   NAME                     |      PRICE       |      TOTAL"
        android:textColor="#000000"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintBottom_toTopOf="@+id/tempOrderRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/completeInvoice"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#84E5F1"
        android:text="@string/completeInvoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frozenProductsRecyclerView"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/tempTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_15sdp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:text=""
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempOrderRecyclerView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>